--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "ts-url",
   "version": "1.0.0",
   "description": "A port of Elm's URL library to Typescript",
-  "main": "index.js",
+  "main": "dist/ts-url.cjs.js",
   "scripts": {
+    "build": "preconstruct build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -12,5 +13,8 @@
     "url"
   ],
   "author": "Frank Hampus Weslien",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@preconstruct/cli": "^2.2.2"
+  }
 }
